--- a/site/css/animation.css
+++ b/site/css/animation.css
@@ -43,7 +43,7 @@
 }
 .ml14{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
+    font-weight: 100;
     font-size: 50px;
 }
 .ml14 .text-wrapper {
