--- a/site/css/style.css
+++ b/site/css/style.css
@@ -118,6 +118,7 @@ body{
 .Course-details h5{
     text-align: center;
     padding-bottom: 10px;
+    font-size: 14px;
 }
 .Course-details h6{
     text-align: center;
