--- a/site/css/style.css
+++ b/site/css/style.css
@@ -43,6 +43,10 @@ body{
     padding-top: 50px;
     padding-bottom: 50px;
 }
+#contact-icon{
+    width: 16px;
+    height: 16px;
+}
 
 /*--------------------CERTIFICATE-------------------------*/
 #Course h1{
