--- a/site/css/style.css
+++ b/site/css/style.css
@@ -3,7 +3,10 @@
     padding: 0;
 }
 body{
-    background-color: #181818;
+    background-color: #020100;
+}
+.navbar{
+    background-color: #02040f;
 }
 #nav-bar{
     position: sticky;
