--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,165 +1,161 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    background-color: #020100;
+body {
+  background-color: #020100;
 }
-.navbar{
-    background-color: #02040f;
+.navbar {
+  background-color: #02040f;
 }
-#nav-bar{
-    position: sticky;
-    top: 0;
-    z-index: 10; 
-
+#nav-bar {
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
-.navbar-nav li{
-    padding: 0 10px;
-}
-    
-.navbar-nav li a{
-    float: left;
-
-}
-#nav-bar ul li a:hover{
-    color: black;
-    background-color:white;
+.navbar-nav li {
+  padding: 0 10px;
 }
 
-.navbar-toggler{
-    border: none!important;
-   
+.navbar-nav li a {
+  float: left;
 }
-.nav-link{
-    
-    font-weight: 600;
-    font-size: 16px;
+#nav-bar ul li a:hover {
+  color: black;
+  background-color: white;
 }
 
-#menu{
-    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(background1.jpg);
-    background-size: cover;
-    background-position: center;
-    color: white !important;
-    background-attachment: fixed;
-    padding-top: 50px;
-    padding-bottom: 50px;
+.navbar-toggler {
+  border: none !important;
 }
-#contact-icon{
-    width: 16px;
-    height: 16px;
+.nav-link {
+  font-weight: 600;
+  font-size: 16px;
 }
-.middle{
-    position: absolute;
-    width:100%;
+
+#menu {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(background1.jpg);
+  background-size: cover;
+  background-position: center;
+  color: white !important;
+  background-attachment: fixed;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
-.btn{
-    color: white;
-    overflow: hidden;
+#contact-icon {
+  width: 16px;
+  height: 16px;
 }
-.btn:hover i{
-    
-    
-    transform: scale(1.3);
+.middle {
+  width: 100%;
+}
+.btn {
+  color: white;
+}
+.btn:hover i {
+  transform: scale(1.3);
 }
 
 /*--------------------CERTIFICATE-------------------------*/
-#Course h1{
-    text-align: center;
-    color: white !important;
-    padding-bottom: 10px;
-    padding-top: 20px;
-    
+#Course h1 {
+  text-align: center;
+  color: white !important;
+  padding-bottom: 10px;
+  padding-top: 20px;
 }
-#Course h1::after{
-    content: '';
-    background: whitesmoke;
-    display: block;
-    height: 3px;
-    width: 250px;
-    margin: 20px auto 5px;
+#Course h1::after {
+  content: "";
+  background: whitesmoke;
+  display: block;
+  height: 3px;
+  width: 250px;
+  margin: 20px auto 5px;
 }
 
 .swiper-container {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-
-  .swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 350px;
-    height: 350px;
-    background: #FF416C;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FF4B2B, #FF416C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      
-  }
-
-
-.Course-img{
-    width: 100%;
-    height: 350px;
-    overflow: hidden;
-    position: relative;
-
-}
-.Course-img img{
-    width: 100%;
-    height: 350px;
-
-    -webkit-transform: all 1.5s;
-    -moz-transform: all 1.5s;
-    -ms-transform: all 1.5s;
-    -o-transform: all 1.5s;
-    transform: all 1.5s ;
-}
-.Course-details{
-    position: absolute;
-    bottom: 0px;
-    padding: 00px;
-    width: 100%;
-    background:rgba(0, 0, 0, 0.7);
-    color: white;
-    -webkit-transform: translateY(100%);
-    -moz-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    -o-transform: translateY(100%);
-    transform: translateY(100%) ;
-
-    -webkit-transition: all .5s ease-out;
-    -moz-transition: all .5s ease-out;
-    -ms-transition: all .5s ease-out;
-    -o-transition: all .5s ease-out;
-    transition: all .5s ease-out;
-}
-.Course-details h5{
-    text-align: center;
-    padding-bottom: 10px;
-    font-size: 14px;
-}
-.Course-details h6{
-    text-align: center;
-    padding-top: 10px;
-    font-size: 16px;
-
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-.Course-img:hover .Course-details{
-    -webkit-transform: translateY(0);
-    -moz-transform: translateY(0);
-    -ms-transform: translateY(0);
-    -o-transform: translateY(0);
-    transform: translateY(0) ;
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 350px;
+  height: 350px;
+  background: #ff416c; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ff4b2b,
+    #ff416c
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ff4b2b,
+    #ff416c
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-.Course-img:hover img{
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
-    
-    transition: all 1.5s ease-out;
+
+.Course-img {
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+  position: relative;
+}
+.Course-img img {
+  width: 100%;
+  height: 350px;
+
+  -webkit-transform: all 1.5s;
+  -moz-transform: all 1.5s;
+  -ms-transform: all 1.5s;
+  -o-transform: all 1.5s;
+  transform: all 1.5s;
+}
+.Course-details {
+  position: absolute;
+  bottom: 0px;
+  padding: 00px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  -webkit-transform: translateY(100%);
+  -moz-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  -o-transform: translateY(100%);
+  transform: translateY(100%);
+
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -ms-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+.Course-details h5 {
+  text-align: center;
+  padding-bottom: 10px;
+  font-size: 14px;
+}
+.Course-details h6 {
+  text-align: center;
+  padding-top: 10px;
+  font-size: 16px;
+}
+
+.Course-img:hover .Course-details {
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
+  transform: translateY(0);
+}
+.Course-img:hover img {
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  -o-transform: scale(1.3);
+  transform: scale(1.3);
+
+  transition: all 1.5s ease-out;
 }
