--- a/site/css/style.css
+++ b/site/css/style.css
@@ -52,6 +52,8 @@ body {
 }
 .btn {
   color: white;
+  width: 50px;
+
 }
 .btn:hover i {
   transform: scale(1.3);
@@ -159,3 +161,5 @@ body {
 
   transition: all 1.5s ease-out;
 }
+
+/*--------------------Skills--------------------*/
