--- a/site/css/animation.css
+++ b/site/css/animation.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 #menu h2{
     margin-top: 50px;
     color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Lora', serif;
     font-size: 26px;
     
 }
@@ -41,8 +42,9 @@
     width: 300px;
     border: 10px solid #181818;
 }
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
 .ml14{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'PT Serif', serif;
     font-weight: 100;
     font-size: 50px;
 }
