--- a/site/css/style.css
+++ b/site/css/style.css
@@ -45,10 +45,10 @@ body {
 /*----------------------Common style Start-----*/
 .services .card, .experience .card{
   background-color: transparent;
-  transition: 0.5s;
 }
 .services .card:hover,.experience .card:hover{
   box-shadow: 0 2px 20px #9bf6ff;
+  transition: 0.5s;
 }
 .aboutme ul, .services .tools{
   color: white;
@@ -258,8 +258,58 @@ h1::after {
   margin:2px 0;
   line-height: 23px;
 }
+/*--------------portfolio-----------------*/
+.project-area button{
+  color : white;
+  border: none;  
+}
+.project-area .btn{
+  border-radius: 50px 20px;
+}
+.project-area .btn:hover{
+  background: #9bf6ff;
+  color:black;
+  transition: 0.5s;
+  border: none;
+  border-radius: 50px 20px;
+}
+.our-project img{
+  border-radius: 10px 10px;
+}
+/*------------Interested to work-----------------*/
+.work{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)),
+  url(../img/b-3.jpg);
+  background-size: cover;
+  background-position: center;
+  color: white !important;
+  background-attachment: fixed;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.work .headline{
+  font-weight: bold;
+}
+.work .btn{
+  border-radius: 60px 30px;
+  background-color:#9bf6ff;
+}
+.work .btn:hover{
+  border-radius: 30px 60px;
+  transition: 0.5s;
+}
 
-
+/*-----------Contact us-------------------------*/
+.contact-us{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)),
+  url(../img/b-4.jpg);
+  background-size: cover;
+  background-position: center;
+  color: white !important;
+  background-attachment: absolute;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
 /*--------------footer-----------------*/
 .footer{
   color: white;
