--- a/site/css/style.css
+++ b/site/css/style.css
@@ -65,7 +65,7 @@ body {
   border: 1px solid #9bf6ff;
   border-radius: 5px;
 }
-#nav-bar ul li a:hover, .middle .btn:hover, #bg, .services .btn, .tech-skills .nav-item:hover{
+#nav-bar ul li a:hover, .middle>.btn:hover, #bg, .services .s_btn, .tech-skills .nav-item:hover{
   background-color:#9bf6ff;
 }
 #contact-icon:hover, .aboutme .hello span, .aboutme-pera a, .experience .card-subtitle, .services i, .services p{
@@ -98,13 +98,13 @@ body {
 .middle {
   width: 100%;
 }
-.middle .btn {
+.middle>.btn {
   color: white;
   width: 50px;
   
 }
 
-.middle .btn:hover {
+.middle>.btn:hover {
   color:black;
   border-radius: 50px 20px;
   transition: 0.5s;
@@ -148,7 +148,7 @@ body {
   height: 30px;
   width: 30px;
 }
-.services .btn{
+.services  .s_btn{
   float: center;
   border-radius: 50px 20px;
 }
@@ -263,12 +263,12 @@ h1::after {
   color : white;
   border: none;  
 }
-.project-area .btn{
+.project-area .p_btn{
   border-radius: 50px 20px;
 }
-.project-area .btn:hover{
+.project-area .p_btn:hover{
   background: #9bf6ff;
-  color:black;
+  color:rgb(0, 0, 0);
   transition: 0.5s;
   border: none;
   border-radius: 50px 20px;
@@ -276,6 +276,12 @@ h1::after {
 .our-project img{
   border-radius: 10px 10px;
 }
+
+.button_p{
+  background-color: #e63946;
+  color: #9bf6ff;
+}
+
 /*------------Interested to work-----------------*/
 .work{
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)),
@@ -290,11 +296,11 @@ h1::after {
 .work .headline{
   font-weight: bold;
 }
-.work .btn{
+.work .w_btn{
   border-radius: 60px 30px;
   background-color:#9bf6ff;
 }
-.work .btn:hover{
+.work .w_btn:hover{
   border-radius: 30px 60px;
   transition: 0.5s;
 }
